# 1D_LSE

./: README.md  app.py  pyproject.toml  requirements.txt
callbacks/: image_viewer.py  update_data.py
components/: controls.py  image_viewer.py
data/: benchmark_data_vae.parquet  benchmark_latent_vectors_vae.parquet  latent_vectors_relevant_data1.parquet  relevant_data1.parquet  svae_model_100.pth  svae_model_250.pth
utils/: README.md  data_utils.py  plot_utils.py
